Epic: fix stretched logo grid

--- a/static/src/stylesheets/module/experiments/_embed.scss
+++ b/static/src/stylesheets/module/experiments/_embed.scss
@@ -129,6 +129,7 @@
 }
 
 .contributions__payment-logos {
+    align-self: flex-start;
     height: 25px;
 }
 
